--- a/canasta.html
+++ b/canasta.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <div id="basket-section">
-        <h2>Canasta <button id="clear-button" onclick="clearBasket()">Quitar Todo</button> </h2>
-        
+        <h2>Canasta</h2>
+        <button id="clear-button" onclick="clearBasket()">Quitar Todo</button>
         <a href="index.html" class="back-button">Volver</a>
         <ul id="basket"></ul>
         <p>Total: $<span id="total">0</span></p>
