--- a/index.html
+++ b/index.html
@@ -17,14 +17,13 @@
         <ul>
             <li><a href="entradas.html#menu-entradas">Tramessi / Entradas</a></li>
             <li><a href="ensaladas.html#menu-ensaladas">Insalate / Ensaladas</a></li>
-            <li><a href="canasta.html#basket-section">Paste lunghe</a></li>
-            <li><a href="entradas.html#menu-entradas">Paste Ripiene</a></li>
-            <li><a href="ensaladas.html#menu-ensaladas">Sorrentini</a></li>
-            <li><a href="canasta.html#basket-section">Risotti</a></li>
-            <li><a href="entradas.html#menu-entradas">Carnes</a></li>
+            <li><a href="pastas.html#menu-pastas">Paste / Pastas</a></li>
+            <li><a href="salsas.html#menu-salsas">Salsas</a></li>
+            <li><a href="risoto.html#menu-risoto">Risotti</a></li>
+            <li><a href="carnes.html#menu-carnes">Carnes</a></li>
             <li><a href="ensaladas.html#menu-ensaladas">Autore Menu</a></li>
             <li><a href="canasta.html#basket-section">Menu Turistico</a></li>
-            <li><a href="entradas.html#menu-entradas">Dolci / Postres</a></li>
+            <li><a href="postres.html#menu-postres">Dolci / Postres</a></li>
             <li><a href="canasta.html#basket-section">Canasta</a></li>
         </ul>
     </nav>
