--- a/entradas.html
+++ b/entradas.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="container">
+        
     <div class="menu-section">
         <h2>Tramessi / Entradas</h2>
         <a href="index.html" class="back-button">Volver</a>
@@ -78,5 +80,6 @@
     </div>
     <div id="basket-container"></div>
     <script src="script.js"></script>
+    </div>
 </body>
 </html>
