--- a/index.html
+++ b/index.html
@@ -8,25 +8,26 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <h1>Botticelli</h1>
-        <h2>PASTA FATTA IN CASA</h2>
-    </header>
+    <div class="container">
+        <header>
+            <h1>Botticelli</h1>
+            <h2>PASTA FATTA IN CASA</h2>
+        </header>
 
-    <nav class="main-menu">
-        <ul>
-            <li><a href="entradas.html#menu-entradas">Tramessi / Entradas</a></li>
-            <li><a href="ensaladas.html#menu-ensaladas">Insalate / Ensaladas</a></li>
-            <li><a href="pastas.html#menu-pastas">Paste / Pastas</a></li>
-            <li><a href="salsas.html#menu-salsas">Salsas</a></li>
-            <li><a href="risoto.html#menu-risoto">Risotti</a></li>
-            <li><a href="carnes.html#menu-carnes">Carnes</a></li>
-            <li><a href="ensaladas.html#menu-ensaladas">Autore Menu</a></li>
-            <li><a href="canasta.html#basket-section">Menu Turistico</a></li>
-            <li><a href="postres.html#menu-postres">Dolci / Postres</a></li>
-            <li><a href="canasta.html#basket-section">Canasta</a></li>
-        </ul>
-    </nav>
+        <nav class="main-menu">
+            <ul>
+                <li><a href="entradas.html#menu-entradas">Tramessi / Entradas</a></li>
+                <li><a href="ensaladas.html#menu-ensaladas">Insalate / Ensaladas</a></li>
+                <li><a href="pastas.html#menu-pastas">Paste / Pastas</a></li>
+                <li><a href="salsas.html#menu-salsas">Salsas</a></li>
+                <li><a href="risoto.html#menu-risoto">Risotti</a></li>
+                <li><a href="carnes.html#menu-carnes">Carnes</a></li>
+                <li><a href="ensaladas.html#menu-ensaladas">Autore Menu</a></li>
+                <li><a href="canasta.html#basket-section">Menu Turistico</a></li>
+                <li><a href="postres.html#menu-postres">Dolci / Postres</a></li>
+                <li><a href="canasta.html#basket-section">Canasta</a></li>
+            </ul>
+        </nav>
 
     <div id="qrcode"></div>
 
@@ -42,5 +43,6 @@
             height: 128
         });
     </script>
+    </div>
 </body>
 </html>
