--- a/carnes.html
+++ b/carnes.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="container">
     <div class="menu-section">
-        <h2>Salsas</h2>
+        <h2>Carnes</h2>
         <a href="index.html" class="back-button">Volver</a>
         </header><div class="menu-item">
             <div class="item-info">
@@ -131,5 +132,6 @@
     </div>
     <div id="basket-container"></div>
     <script src="script.js"></script>
+    </div>
 </body>
 </html>
