--- a/ensaladas.html
+++ b/ensaladas.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="container">
     <div class="menu-section">
         <h2>Insalate / Ensaladas</h2>
         <a href="index.html" class="back-button">Volver</a>
@@ -62,5 +63,6 @@
         <div id="basket-container"></div>
 
         <script src="script.js"></script>
+    </div>
 </body>
 </html>
