--- a/risoto.html
+++ b/risoto.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="container">
     <div class="menu-section">
         <h2>Risotti</h2>
         <div class="menu-item">
@@ -50,5 +51,6 @@
         <div id="basket-container"></div>
 
         <script src="script.js"></script>
+    </div>
 </body>
 </html>
