--- a/salsas.html
+++ b/salsas.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="container">
     <div class="menu-section">
         <h2>Salsas</h2>
         <a href="index.html" class="back-button">Volver</a>
@@ -149,5 +150,6 @@
     </div>
     <div id="basket-container"></div>
     <script src="script.js"></script>
+    </div>
 </body>
 </html>
