--- a/canasta.html
+++ b/canasta.html
@@ -8,6 +8,22 @@
 </head>
 <body>
     <div id="basket-section">
+        <!-- Navegación Dinámica -->
+        <div class="container-wrapper">
+        <nav class="dynamic-menu">
+            <ul>
+                <li><a href="entradas.html">Entradas</a></li>
+                <li><a href="ensaladas.html">Ensaladas</a></li>
+                <li><a href="pastas.html">Pastas</a></li>
+                <li><a href="salsas.html">Salsas</a></li>
+                <li><a href="risotti.html">Risotti</a></li>
+                <li><a href="carnes.html">Carnes</a></li>
+                <li><a href="bebidas.html">Autore Menu</a></li>
+                <li><a href="bebidas.html">Menu Turistico</a></li>
+                <li><a href="postres.html">Postres</a></li>
+            </ul>
+        </nav>
+        </div>
         <h2>Canasta</h2>
         <button id="clear-button" onclick="clearBasket()">Quitar Todo</button>
         <a href="index.html" class="back-button">Volver</a>
