--- a/canasta.html
+++ b/canasta.html
@@ -16,7 +16,7 @@
                 <li><a href="ensaladas.html">Ensaladas</a></li>
                 <li><a href="pastas.html">Pastas</a></li>
                 <li><a href="salsas.html">Salsas</a></li>
-                <li><a href="risotti.html">Risotti</a></li>
+                <li><a href="risoto.html">Risotti</a></li>
                 <li><a href="carnes.html">Carnes</a></li>
                 <li><a href="bebidas.html">Autore Menu</a></li>
                 <li><a href="bebidas.html">Menu Turistico</a></li>
