--- a/ensaladas.html
+++ b/ensaladas.html
@@ -60,6 +60,7 @@
             <button onclick="addToBasket('Insalata di frutti de mare', 23500)">Agregar</button>
         </div>
         <!-- Agregar el resto de los elementos del menú de la misma manera -->
+    </div>
         <div id="basket-container"></div>
 
         <script src="script.js"></script>
