--- a/postres.html
+++ b/postres.html
@@ -103,7 +103,7 @@
         </div>
     
 
-    
+    </div>
         <!-- Agregar el resto de los elementos del menú de la misma manera -->
         <div id="basket-container"></div>
 
