--- a/entradas.html
+++ b/entradas.html
@@ -11,7 +11,7 @@
         
     <div class="menu-section">
         <h2>Tramessi / Entradas</h2>
-        <a href="index.html" class="back-button">Volver</a>
+        <a href="index.html" class="back-button">Menú Principal</a>
     </header>
         <div class="menu-item">
             <div class="item-info">
