--- a/canasta.html
+++ b/canasta.html
@@ -26,7 +26,7 @@
         </div>
         <h2>Canasta</h2>
         <button id="clear-button" onclick="clearBasket()">Quitar Todo</button>
-        <a href="index.html" class="back-button">Volver</a>
+        <a href="index.html" class="back-button">Menú Principal</a>
         <ul id="basket"></ul>
         <p>Total: $<span id="total">0</span></p>
         <button id="order-button" onclick="placeOrder()" disabled>Realizar Pedido</button>
