--- a/risoto.html
+++ b/risoto.html
@@ -10,6 +10,7 @@
     <div class="container">
     <div class="menu-section">
         <h2>Risotti</h2>
+        <a href="index.html" class="back-button">Menú Principal</a>
         <div class="menu-item">
             <div class="item-info">
                 <p class="item-name">Di Pollo o Vitello</p>
