--- a/salsas.html
+++ b/salsas.html
@@ -10,7 +10,7 @@
     <div class="container">
     <div class="menu-section">
         <h2>Salsas</h2>
-        <a href="index.html" class="back-button">Volver</a>
+        <a href="index.html" class="back-button">Menú Principal</a>
         </header>
         <div class="menu-item">
             <div class="item-info">
