--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <li><a href="salsas.html#menu-salsas">Salsas</a></li>
                 <li><a href="risoto.html#menu-risoto">Risotti</a></li>
                 <li><a href="carnes.html#menu-carnes">Carnes</a></li>
-                <li><a href="ensaladas.html#menu-ensaladas">Autore Menu</a></li>
+                <li><a href="autore.html#menu-autore">Autore Menu</a></li>
                 <li><a href="canasta.html#basket-section">Menu Turistico</a></li>
                 <li><a href="postres.html#menu-postres">Dolci / Postres</a></li>
                 <li><a href="canasta.html#basket-section">Canasta</a></li>
