--- a/carnes.html
+++ b/carnes.html
@@ -11,7 +11,8 @@
     <div class="menu-section">
         <h2>Carnes</h2>
         <a href="index.html" class="back-button">Menú Principal</a>
-        </header><div class="menu-item">
+        </header>
+        <div class="menu-item">
             <div class="item-info">
                 <p class="item-name">Bife de Chorizo</p>
                 <p class="item-price">$17100</p>
