--- a/canasta.html
+++ b/canasta.html
@@ -3,26 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Canasta</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div id="basket-section">
         <!-- Navegación Dinámica -->
         <div class="container-wrapper">
-        <nav class="dynamic-menu">
-            <ul>
-                <li><a href="entradas.html">Entradas</a></li>
-                <li><a href="ensaladas.html">Ensaladas</a></li>
-                <li><a href="pastas.html">Pastas</a></li>
-                <li><a href="salsas.html">Salsas</a></li>
-                <li><a href="risoto.html">Risotti</a></li>
-                <li><a href="carnes.html">Carnes</a></li>
-                <li><a href="bebidas.html">Autore Menu</a></li>
-                <li><a href="bebidas.html">Menu Turistico</a></li>
-                <li><a href="postres.html">Postres</a></li>
-            </ul>
-        </nav>
+            <nav class="dynamic-menu">
+                <ul>
+                    <li><a href="entradas.html">Entradas</a></li>
+                    <li><a href="ensaladas.html">Ensaladas</a></li>
+                    <li><a href="pastas.html">Pastas</a></li>
+                    <li><a href="salsas.html">Salsas</a></li>
+                    <li><a href="risoto.html">Risotti</a></li>
+                    <li><a href="carnes.html">Carnes</a></li>
+                    <li><a href="bebidas.html">Autore Menu</a></li>
+                    <li><a href="bebidas.html">Menu Turistico</a></li>
+                    <li><a href="postres.html">Postres</a></li>
+                </ul>
+            </nav>
         </div>
         <h2>Canasta</h2>
         <button id="clear-button" onclick="clearBasket()">Quitar Todo</button>
@@ -30,9 +30,21 @@
         <ul id="basket"></ul>
         <p>Total: $<span id="total">0</span></p>
         <button id="order-button" onclick="placeOrder()" disabled>Realizar Pedido</button>
-        
     </div>
     <script src="script.js"></script>
+    <script>
+        // Enviar el pedido a la aplicación Electron
+        function sendOrderToElectron() {
+            const ipcRenderer = require('electron').ipcRenderer;
+            ipcRenderer.send('pedido', JSON.stringify(basket));
+        }
 
+        // Sobreescribir la función placeOrder() para enviar el pedido a Electron antes de mostrar el alert
+        function placeOrder() {
+            sendOrderToElectron();
+            alert('¡Pedido realizado! Gracias por tu compra.');
+            resetBasket();
+        }
+    </script>
 </body>
 </html>
